--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ng-chat-app",
   "version": "0.0.0",
   "scripts": {
+    "deploy": "ng deploy --base-href=/ng-chat-app/",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -29,6 +30,7 @@
     "@angular/cli": "^17.3.8",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
+    "angular-cli-ghpages": "^2.0.0-beta.2",
     "autoprefixer": "^10.4.19",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
