增加環境變數，調整 deploy

--- a/angular.json
+++ b/angular.json
@@ -60,6 +60,17 @@
                   "with": "src/environments/environment.development.ts"
                 }
               ]
+            },
+            "gh-pages": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.gh-pages.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -102,7 +113,10 @@
           }
         },
         "deploy": {
-          "builder": "angular-cli-ghpages:deploy"
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "buildTarget": "ng-chat-app:build:gh-pages"
+          }
         }
       }
     }
