--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-architects/ngrx-toolkit": "^0.3.1",
     "@angular/animations": "^17.3.0",
     "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.3.0",
